# click

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  devenv.nix  flake.nix  flake3.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: jcdv8acpssl4lf25xcwb7rmxg89dnyif-source  npy0cbk0fjm067wccz0b8v71xq9cjyra-source
.github/workflows/: build.yml  check.yml  release.yml  rust.yml
src/: app.rs  interval.rs  lib.rs  main.rs
src/click/: linux.rs  mod.rs  windows.rs
src/click/macos/: accessibility.rs  mod.rs
src/dialogs/: about.rs
src/input/: linux.rs  mod.rs  windows.rs
src/input/macos/: accessibility.rs  mod.rs
