[package]
name = "click"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gtk = { package = "gtk4", version = "0.10.3" }
relm4 = { version = "0.10.0", features = ["gnome_48", "libadwaita"] }
relm4-components = "0.10.0"
relm4-icons = "0.10.0"
relm4-macros = "0.10.0"
tracker = "0.2.2"

[build-dependencies]
relm4-icons-build = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
