[package]
name = "click"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cfg-if = "1.0.4"
gtk = { package = "gtk4", version = "0.10.3" }
relm4 = { version = "0.10.0", features = ["gnome_48", "libadwaita"] }
relm4-components = { version = "0.10.0", features = ["libadwaita"] }
relm4-icons = "0.10.0"
relm4-macros = "0.10.0"
tokio = { version = "1.48.0", features = ["time"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[build-dependencies]
relm4-icons-build = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
objc2-application-services = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Media",
  "Win32_UI_Input_KeyboardAndMouse"
] }
