[package]
name = "click"
version = "0.1.0"
edition = "2024"

[package.metadata.packager]
name = "click"
product-name = "Click"
identifier = "lol.indent.click"

icons = ["32x32.png"]

before-packaging-command = "cargo build --release"
out-dir = "./dist"

[package.metadata.packager.macos]
signing-identity = "-"

[dependencies]
anyhow = "1.0.100"
cfg-if = "1.0.4"
eframe = { version = "0.33.3", features = ["persistence"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time"
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-application-services = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Media",
  "Win32_UI_Input_KeyboardAndMouse"
] }
